--- a/envpool/BUILD
+++ b/envpool/BUILD
@@ -33,6 +33,7 @@ py_library(
         "//envpool/atari:atari_registration",
         "//envpool/box2d:box2d_registration",
         "//envpool/classic_control:classic_control_registration",
+        "//envpool/gbenv:gbenv_registration",
         "//envpool/mujoco:mujoco_dmc_registration",
         "//envpool/mujoco:mujoco_gym_registration",
         "//envpool/procgen:procgen_registration",
@@ -50,6 +51,7 @@ py_library(
         "//envpool/atari",
         "//envpool/box2d",
         "//envpool/classic_control",
+        "//envpool/gbenv",
         "//envpool/mujoco:mujoco_dmc",
         "//envpool/mujoco:mujoco_gym",
         "//envpool/procgen",
